force-app/main/default/objects/InquiryCommercialDistributionDetail__c/InquiryCommercialDistributionDetail__c.object-meta.xml
<CustomObject>
    <label>伺い商流明細</label>
    <nameField>
        <label>商流No.</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>