force-app/main/default/objects/InquiryCommercialDistributionDetail__c/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>保存時に自動で設定されます。</inlineHelpText>
    <label>最終顧客</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>伺い商流明細 (最終顧客)</relationshipLabel>
    <relationshipName>InquiryCommercialDistributionDetails</relationshipName>
    <type>Lookup</type>
</CustomField>