force-app/main/default/objects/InquiryCommercialDistributionDetail__c/fields/CommercialDistribution1__c.field-meta.xml
<CustomField>
    <fullName>CommercialDistribution1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商流1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>伺い商流明細</relationshipLabel>
    <relationshipName>Bjyr</relationshipName>
    <type>Lookup</type>
</CustomField>