force-app/main/default/objects/InquiryCommercialDistributionDetail__c/fields/CommercialDistribution1Manual__c.field-meta.xml
<CustomField>
    <fullName>CommercialDistribution1Manual__c</fullName>
    <inlineHelpText>取引先登録申請中、JV、SPCなどに使用</inlineHelpText>
    <label>商流1（手入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>