force-app/main/default/objects/InquiryCommercialDistributionDetail__c/fields/CommercialDistribution1OrderedCheck__c.field-meta.xml
<CustomField>
    <fullName>CommercialDistribution1OrderedCheck__c</fullName>
    <formula>IF(INCLUDES(CommercialDistributionOfOrderedVendor__c , &quot;商流1&quot;),true,false )</formula>
    <label>商流1受注済</label>
    <type>Checkbox</type>
</CustomField>