force-app/main/default/objects/InquiryCommercialDistributionDetail__c/fields/CommercialDistribution2__c.field-meta.xml
<CustomField>
    <fullName>CommercialDistribution2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商流2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>伺い商流明細 (商流2)</relationshipLabel>
    <relationshipName>Bjyi2</relationshipName>
    <type>Lookup</type>
</CustomField>