force-app/main/default/objects/InquiryCommercialDistributionDetail__c/fields/CommercialDistribution3__c.field-meta.xml
<CustomField>
    <fullName>CommercialDistribution3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商流3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>伺い商流明細 (商流3)</relationshipLabel>
    <relationshipName>Bjz6</relationshipName>
    <type>Lookup</type>
</CustomField>