force-app/main/default/objects/InquiryCommercialDistributionDetail__c/fields/CommercialDistribution3Manual__c.field-meta.xml
<CustomField>
    <fullName>CommercialDistribution3Manual__c</fullName>
    <inlineHelpText>取引先登録申請中などに使用</inlineHelpText>
    <label>商流3（手入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>