force-app/main/default/objects/InquiryCommercialDistributionDetail__c/fields/CommercialDistributionOfOrderedVendor__c.field-meta.xml
<CustomField>
    <fullName>CommercialDistributionOfOrderedVendor__c</fullName>
    <label>受注済</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>商流1</fullName>
            </value>
            <value>
                <fullName>商流2</fullName>
            </value>
            <value>
                <fullName>商流3</fullName>
            </value>
            <value>
                <fullName>商流4</fullName>
            </value>
            <value>
                <fullName>商流5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>