force-app/main/default/objects/InquiryCommercialDistributionDetail__c/fields/QuoteBiddingInquiry__c.field-meta.xml
<CustomField>
    <fullName>QuoteBiddingInquiry__c</fullName>
    <label>伺い件名</label>
    <referenceTo>QuoteBiddingInquiry__c</referenceTo>
    <relationshipLabel>伺い商流明細</relationshipLabel>
    <relationshipName>a9fo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>