force-app/main/default/objects/InquiryCommercialDistributionDetail__c/fields/SubmissionTargetType__c.field-meta.xml
<CustomField>
    <fullName>SubmissionTargetType__c</fullName>
    <label>提出先種別</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>最終顧客</fullName>
            </value>
            <value>
                <fullName>コンサル</fullName>
            </value>
            <value>
                <fullName>価格調査業者</fullName>
            </value>
            <value>
                <fullName>入札参加予定業者/元請業者</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>